# aoc2021

./: Cargo.toml
.cargo/: config  config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
day01/: Cargo.toml
day01/.cargo/: config
day01/.devcontainer/: devcontainer.json
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: input2.txt  main.rs
day03/: Cargo.toml
day03/src/: input.txt  main.rs
day04/: Cargo.toml  out.asm
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml  v.sh
day09/src/: main.rs
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/src/: main.rs
day20/src/: main.rs  test_input2.txt
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: input2.txt  main.rs
day24/: Cargo.toml
day24/src/: main.rs  x = 0
day25/: Cargo.toml  build.rs
day25/src/: atari.rs  main.rs  sim.rs
day2_1/: Cargo.toml
day2_1/src/: main.rs
day3/src/: main.rs
day5/src/: main.rs
day8/: Cargo.toml
day9/src/: main.rs
io/: Cargo.toml
io/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
