[package]
name = "day1"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
staticvec = {version="0", default-features = false}
# arrayvec = {version="0", default-features = false}

[profile.dev]
lto = true
# opt-level = 2

[profile.release]
lto = true
