[package]
name = "day01"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
staticvec = {version="0", default-features = false}
# arrayvec = {version="0", default-features = false}
io = {path="../io"}


[profile.dev]
lto = true
opt-level = 2
debug-assertions = false
overflow-checks = false

[profile.release]
lto = true
