[package]
name = "day03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#staticvec = {version="0", default-features = false}
arrayvec = {version="0", default-features = false}
utils = {path="../utils"}
ufmt-stdio = "0"