[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
ufmt-stdio = "0"
mos-alloc = "0.2.0"
bstr = {git="https://github.com/mrk-its/bstr", branch="mos_fix", default_features=false}
